# turbulence_sim

./: .gitignore  .gitmodules  LICENSE  README.md
IRSDS_paper/TurbRecon_TCI/: README.md  deblur_main.m  demo.m  demo_color.m  demo_color_lotsofdata.m  demo_orig.m  registration_main.m  sort_450images_into_dirs.py  stitch.py
IRSDS_paper/TurbRecon_TCI/downloads/PlugPlayADMM/: PlugPlayADMM_deblur.m  afun.m  demo_deblur.m  license.txt  wrapper_BM3D.m
IRSDS_paper/TurbRecon_TCI/downloads/PlugPlayADMM/utilities/: constructGGt.m  defGGt.m  downsample2.m  upsample2.m
IRSDS_paper/TurbRecon_TCI/downloads/optical_flow/: demoflow.m
IRSDS_paper/TurbRecon_TCI/downloads/optical_flow/mex/: Image.h  Vector.h  project.h
IRSDS_paper/TurbRecon_TCI/utils/: PSFUpdate.m  deblur_algorithm_v1.m  deblur_algorithm_v2.m  dictionary.mat  high.mat  low.mat  lucky_region_func.m  medium_orig.mat  move.mat  psf_est_v1.m  psf_est_v2.m  reference_frame_func.m  shock.m  stat.mat  vec.m  wrapper_PnP.m  wrapper_optflow.m
common/cmake_utils/: find_GSL.cmake
common/include/: integrals_spatial_corr.h  lens_pixel_size.h  motion_compensate.h  noll_functions.h  opencv_helper.h  turb_sim_lib.h  turbulence_param.h  turbulence_sim.h  zernike_functions.h
matlab/: create_r0_list.m  fft_tests.m  get_pixel_size.m  metric_test.m  metric_test_app.mlapp  pixel_measures.m  turb_sim_lib_example.m  turb_sim_lib_simReals.m  turb_sim_lib_simulateByCn2.m
matlab/cw_ssim/: buildSCFpyr.m  buildSCFpyrLevs.m  cwssim_index.m  factorialM.m  main.m  mainTest1.m  pointOp.m  pyrBand.m  pyrBandIndices.m  rcosFn.m  steer2HarmMtx.m
matlab/eval_images/: meanStd_ImgsReals.m  meanStd_ImgsSims.m  meanStd_ImgsSimsByCn2.m  writeReals.m
matlab/modify_baselineImgs/: ComprehensiveHistMatching.m  GetImageInfo.m  HistogramMatching.m  matchIntensityToReal.m
matlab/requested_metrics/: CreateWindowArray.m  FilterMetrics.m  GetImageInfoMod.m  GetRealImageFilenames.m  mainCompareDiffPatches.m  mainCorrFFTRealSim.m  mainCorrFFTsAllReals.m  mainCorrOneRow.m  mainCorrPatches.m  mainCorrPatchesAllRngZoom.m  mainCorrPatches_noBase.m  mainMetricsFriedP.m  mainMetricsm.m  main_turb_metric.m  main_turb_metricRealOnly.m  main_turb_metricRev2.m  main_turb_metricScanWindow.m  main_turb_metricScanWindow2.m  main_turb_metricSimOnly.m  main_turb_metric_AverageImgs.m  main_turb_metric_OnSimReal.m  main_turb_metricsTwoInputs.m  metricsScanWindows.m  metricsToSimImgsAllReals.m  metricsToSimulatedImgs.m  metricsToSimulatedImgsTEST.m  tb_metric_v2.m  testLapOnlyAll.m  turbulence_metricVL.m  turbulence_metric_Array.m  turbulence_metric_ArrayN.m  turbulence_metric_BL.m  turbulence_metric_noBL.m  turbulence_metric_noBL2.m  untitled.m  vicky_testing.m
matlab/requested_metrics/Archive/: FilterMetrics.m  mainCorrFFTsAllReals_NoLaplacian.m  mainCorrOneRow.m  mainCorrPatches.m  mainCorrPatches_noBase.m  meshplot_r0.m  turbulence_metric_BL.m
matlab/requested_metrics/Archive/Test_cwssim/: CW_SSIM.m  mainTestCWSSIM.m  xcorrImages.m
matlab/requested_metrics/Test_Cn2Varying/: testCn2VaryingResults_NonLap.m  testCn2VaryingResults_NonLap1.m  turbulence_metric_noBL_testVL.m
matlab/requested_metrics/Test_cwssim/: mainTestCWSSIM.m
matlab/requested_metrics/ssim_ffts/: SSIM_FFT_SepMagPhase.m  SSIM_FFT_SepRealImg.m  SSIM_FFT_fullComplex.m  SSIM_FFT_magn.m  mainSSIM.m  mainSSIM_nonLap.m
mza_share/: CMakeLists.txt
mza_share/cmake_utils/: find_share.cmake
mza_share/src/: main.cpp
turb_sim_cpp/: CMakeLists.txt  README.md
turb_sim_cpp/cmake_utils/: find_GSL.cmake
turb_sim_cpp/include/: cv_dft_conv.h  integrals_spatial_corr.h  motion_compensate.h  opencv_helper.h  turbulence_param.h  turbulence_sim.h  zernike_functions.h
turb_sim_cpp/src/: tb_main.cpp
turb_sim_lib/: CMakeLists.txt
turb_sim_lib/src/: tb_lib_main.cpp  tb_main.cpp
turb_sim_ml/: MotionCompensate.m  ZernikeCalc.m  Zernike_GenCoeff.m  affine_fit.m  call_flow_parameter.m  circ.m  demo.m  dictionary1.mat  license.txt  sim_fun.m
turb_sim_py/: CreateImages ByCn2.py  CreateImages_ModBase.py  CreateInfoTable.py  Example_1_full.py  Example_2_tiltonly.py  Example_CreateImages.py  README.md  S_half-temp.npy  Simulate_OneImage.py  TurbSim_v1_main.py  example_lib.py  integrals_spatial_corr.py
turb_sim_py/EvaluteAtmosphericData/: AddValuesCombSharpImgs.py  Plots_plotly.py
turb_sim_py/LuckyImaging/: LuckyImageFinal.py  aligningReals.py
